[package]
name = "k256"
description = "K-256 (secp256k1) elliptic curve"
version = "0.3.0"
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/elliptic-curve"
repository = "https://github.com/RustCrypto/elliptic-curves/tree/master/k256"
readme = "README.md"
edition = "2018"
categories = ["cryptography", "cryptography::cryptocurrencies", "no-std"]
keywords = ["bitcoin", "crypto", "ecc", "ethereum", "secp256k1"]

[dependencies]
ecdsa = { version = "= 0.7.0-pre", optional = true, default-features = false }
elliptic-curve = { version = "= 0.5.0-pre",  default-features = false, features = ["weierstrass"] }
sha2 = { version = "0.9", optional = true }
zeroize = { version = "1", optional = true, default-features = false }

[dev-dependencies]
hex = "0.4"
proptest = "0.10"
num-bigint = "0.3"
num-traits = "0.2"

[features]
default = ["arithmetic", "u64_backend", "std"]
rand = ["elliptic-curve/rand_core"]
sha256 = ["ecdsa/digest", "ecdsa/hazmat", "sha2"]
test-vectors = []
std = ["elliptic-curve/std"]

arithmetic = []
u64_backend = []
u32_backend = []
u64_montgomery = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
